# imterm

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  conanfile.txt
.github/workflows/: cmake.yml
src/: CMakeLists.txt  capture.cpp  capture.h  coordinates.h  escape_sequence_parser.cpp  escape_sequence_parser.h  imterm.cpp  terminal_data.cpp  terminal_data.h  terminal_logger.cpp  terminal_logger.h  terminal_state.cpp  terminal_state.h  terminal_types.h  terminal_view.cpp  terminal_view.h  vector_timed.h
